# Dio_1_Repositorio_Bootcamp

./: README.md
Criando Pacotes/: README.md  setup.py  teste.py
Criando Pacotes/package_name/: file1_name.py
Criando modelos com Python e Machine Learning/: Projeto ML Covid-19.ipynb
Criando modelos com Python e Machine Learning/.ipynb_checkpoints/: Projeto ML Covid-19-checkpoint.ipynb  Untitled-checkpoint.ipynb
Desafios Iniciais Py - Unimed-BH/: Herança.py  Resposta do teste 1.py  Resposta do teste 2.py  Resposta do teste 3.py  range alfabeto.py  teste.py
Desafios intermediarios Py - Unimed-BH/: Resposta do teste 1.py  Resposta do teste 2.py  Resposta do teste 3.py
Descomplicando a criação de pacote/: README.md  pyproject.toml  requirements.txt  setup.py
Descomplicando a criação de pacote/pacote_ola/: saudacao_1.py  saudacao_2.py
Image_Processing/: setup.py
Projeto Banco de dados E-commerce/: MySQL Workbench - Ordem de Serviço.mwb  Projeto E-commerce.mwb  Projeto Universidade.mwb
Projeto Python e Pandas/.ipynb_checkpoints/: Projeto executivo-checkpoint.ipynb
Projeto construindo primeiro projeto lógico de bd/: Construindo primeiro projeto logico.sql
