[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pacote_ola"
version = "0.0.1"
authors = [
  { name="Rayron Soares C", email="rayron2013@gmail.com" },
]
description = """
Saudação 1:
	- Diz Bom dia

Saudação 2:
	- Diz Boa tarde"""

readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"